Fixed alignment problems for small devices and spaced content properly

--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
+@media(max-width:576px) {
+    .alumnitext{
+        font-size: 2vw !important;
+        line-height: 2.1vw !important;
+    }
+}
 body{
    background-color: #F5F1D2; 
 }
@@ -37,7 +43,7 @@ button#share{
     height: 3px !important;
 }
 #bt{
-    font-size: 2.1vw;
+    font-size: 2.6vw;
 }
 .alumnitext{
     display: block;
@@ -48,10 +54,16 @@ button#share{
     font-size: 3vw;
     text-align: center;
 }
-b#follow{
+.follow{
     font-size: 3.2vw;
     color: #7C041B;
 }
+#alumtxt{
+    font-size: 2.4vw;
+    text-align: top;
+    text-align: center;
+}
+
 @media(min-width:800px){
     .container-fluid{
         width: 800px !important;
@@ -69,15 +81,18 @@ b#follow{
         width: 200px !important;
     }
     #bt{
-        font-size: 16px;
+        font-size: 16px !important;
     }
     .alumnitext{
-        font-size: 12px;
+        font-size: 11px;
     }
     #nasscom{
         font-size: 16px;
     }
-    b#follow{
+    .follow{
         font-size: 18px;
+    }
+    #alumtxt{
+        font-size: 24px;
     }
 }
